# agentic-rag

./: .gitignore  README.md  docker-compose.yaml  env.example  m.md  playground copy.ipynb  playground.ipynb  pyproject.toml  reranker_demo.ipynb  verify_settings.py
docs/decisions/: 001-agentic-merkle-rag.md
src/: bbs-44136fa355b3678a
src/agents/document_parser_agent/: __init__.py  agent.py  callbacks.py  prompts.py  session_runner.py  system_prompt.xml
src/agents/ingestion_agent/: __init__.py  agent.py  callbacks.py  prompts.py  session_runner.py  system_prompt.xml
src/agents/pipeline_orchestrator/: __init__.py  agent.py  callbacks.py  (+3 more)
src/document_parser/: README.md  __init__.py  document_parser.py  server.py
src/ingestion_pipeline/: README.md  __init__.py  ingestion_pipeline.py  server.py
src/reranker_pipeline/: README.md  __init__.py  reranker_pipeline.py  server.py
src/shared/: __init__.py  blob_store.py  corpus_manager.py  env_loader.py  schemas.py  utils.py
src/utils/: __init__.py  citation_viewer.py  interactive_layout.py  visualization.py
tests/: diagnose_components.py  diagnose_mismatch.py  diff_pixels.py  test_bbs_real_impact.py  test_blob_store.py  test_build_chunks_comprehensive.py  test_caching_logic.py  test_chunk_hashing.py  test_context_aware_chunking.py  test_context_persistence.py  test_corpus.py  test_direct_search.py  test_end_to_end_impact.py  test_image_parsing.py  test_ingestion_agent_integration.py  test_ingestion_enrichment.py  test_ordinal_shift.py  test_page_identity.py  test_retrieval_impact.py  verify_deduplication.py
(+22 files in other folders)
